--- a/wordpress/wp-config.sample
+++ b/wordpress/wp-config.sample
@@ -5,8 +5,8 @@ define( 'DB_NAME',     '' );
 define( 'DB_USER',     '' );
 define( 'DB_PASSWORD', '' );
 define('DB_HOST', '');
-define('DB_CHARSET', '');
-define('DB_COLLATE', '');
+define('DB_CHARSET', 'utf8mb4');
+define('DB_COLLATE', 'utf8mb4_general_ci');
 
 //** https://codex.wordpress.org/Editing_wp-config.php#table_prefix
 $table_prefix  = '';
