reorder + command in comment

--- a/wordpress/wp-config.sample
+++ b/wordpress/wp-config.sample
@@ -40,29 +40,39 @@ define( 'COOKIE_DOMAIN', 'www.domain.tld' );
 define( 'NOBLOGREDIRECT', 'https://www.domain.tld' );
 
 //** https://codex.wordpress.org/Editing_wp-config.php#Moving_wp-content_folder
+//** rm wp-content/index ; mv wp-content/* .
 define( 'WP_CONTENT_DIR', dirname(__FILE__) . '' );
 define( 'WP_CONTENT_URL', 'https://www.domain.tld' );
 
 //** https://codex.wordpress.org/Editing_wp-config.php#Moving_plugin_folder
+//** mv wp-content/plugins ./vendor
 define( 'WP_PLUGINDIR', dirname(__FILE__) . '/vendor' );
 define( 'WP_PLUGIN_DIR', dirname(__FILE__) . '/vendor' );
 define( 'WP_PLUGIN_URL', 'https://www.domain.tld/vendor' );
 
 //** https://codex.wordpress.org/Editing_wp-config.php#Moving_themes_folder
+//** mv wp-content/themes ./themes
 $theme_root = WP_CONTENT_DIR . '/themes';
 
 //** https://codex.wordpress.org/Editing_wp-config.php#Moving_uploads_folder
+//** mv wp-content/uploads ./assets
 define( 'UPLOADS', 'assets' );
+
+//** https://codex.wordpress.org/Editing_wp-config.php#Empty_Trash
+define( 'MEDIA_TRASH', true );
+
+//**https://codex.wordpress.org/Editing_wp-config.php#Cleanup_Image_Edits
+define( 'IMAGE_EDIT_OVERWRITE', true );
 
 //** https://codex.wordpress.org/Editing_wp-config.php#Post_Revisions
 define( 'WP_POST_REVISIONS', 8 );
 
+//** https://codex.wordpress.org/Editing_wp-config.php#Automatic_Database_Optimizing
+define( 'WP_ALLOW_REPAIR', true );
+
 //** https://codex.wordpress.org/Editing_wp-config.php#Override_of_default_file_permissions
 define( 'FS_CHMOD_DIR', ( 0755 & ~ umask() ) );
 define( 'FS_CHMOD_FILE', ( 0644 & ~ umask() ) );
-
-//** https://codex.wordpress.org/Editing_wp-config.php#Automatic_Database_Optimizing
-define( 'WP_ALLOW_REPAIR', true );
 
 //** https://codex.wordpress.org/Editing_wp-config.php#Require_SSL_for_Admin_and_Logins
 define( 'FORCE_SSL_LOGIN', true );
@@ -85,7 +95,7 @@ define( 'WP_MEMORY_LIMIT', '64M' );
 define( 'WP_MAX_MEMORY_LIMIT', '256M' );
 
 //** https://codex.wordpress.org/Editing_wp-config.php#Cache
-define( 'WP_CACHE', true );
+//** define( 'WP_CACHE', true );
 
 define( 'COMPRESS_CSS',        true );
 define( 'COMPRESS_SCRIPTS',    true );
@@ -96,12 +106,6 @@ define( 'ENFORCE_GZIP',        true );
 define( 'AUTOMATIC_UPDATER_DISABLED', false );  // Disable all automatic updates
 define( 'WP_AUTO_UPDATE_CORE', true ); // Enable all core updates, including minor and major
 define( 'DO_NOT_UPGRADE_GLOBAL_TABLES', false ); // Disable DB Tables auto-update
-
-//** https://codex.wordpress.org/Editing_wp-config.php#Empty_Trash
-define( 'MEDIA_TRASH', true );
-
-//**https://codex.wordpress.org/Editing_wp-config.php#Cleanup_Image_Edits
-define( 'IMAGE_EDIT_OVERWRITE', true );
 
 //** https://codex.wordpress.org/Editing_wp-config.php#Disable_unfiltered_HTML_for_all_users
 define( 'DISALLOW_UNFILTERED_HTML', true );
